build/log/idf_py_stdout_output_20132
[1/10] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D "E:\Phase2 beta\build\bootloader\esp-idf\esptool_py" && C:\Espressif\python_env\idf5.1_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 "E:/Phase2 beta/build/bootloader/bootloader.bin""
Bootloader binary size 0x6810 bytes. 0x7f0 bytes (7%) free.
[2/8] Building C object esp-idf/bee_wifi/CMakeFiles/__idf_bee_wifi.dir/bee_wifi.c.obj
FAILED: esp-idf/bee_wifi/CMakeFiles/__idf_bee_wifi.dir/bee_wifi.c.obj 
ccache C:\Espressif\tools\xtensa-esp32-elf\esp-12.2.0_20230208\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I"E:/Phase2 beta/build/config" -I"E:/Phase2 beta/components/bee_wifi" -IC:/Espressif/frameworks/esp-idf-v5.1/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.1/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/freertos/esp_additions/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.1/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/freertos/esp_additions/arch/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_hw_support/include/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_hw_support/port/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_hw_support/port/esp32/private_include -IC:/Espressif/frameworks/esp-idf-v5.1/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.1/components/soc/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/hal/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_rom/include/esp32 -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_rom/esp32 -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.1/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/xtensa/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.1/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.1/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/lwip/port/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/lwip/port/freertos/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/lwip/port/esp32xx/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/lwip/port/esp32xx/include/arch -I"E:/Phase2 beta/components/bee_nvs" -IC:/Espressif/frameworks/esp-idf-v5.1/components/nvs_flash/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/spi_flash/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_partition/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/deprecated -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/analog_comparator/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/dac/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/gpio/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/gptimer/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/i2c/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/i2s/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/ledc/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/mcpwm/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/parlio/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/pcnt/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/rmt/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/sdio_slave/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/sdmmc/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/sigma_delta/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/spi/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/temperature_sensor/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/touch_sensor/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/twai/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/uart/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/usb_serial_jtag/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/touch_sensor/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_pm/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_ringbuf/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/wifi_provisioning/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/protocomm/include/common -IC:/Espressif/frameworks/esp-idf-v5.1/components/protocomm/include/security -IC:/Espressif/frameworks/esp-idf-v5.1/components/protocomm/include/transports -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_timer/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_wifi/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_wifi/wifi_apps/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_event/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_phy/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_phy/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_netif/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og "-fmacro-prefix-map=E:/Phase2 beta=." -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.1=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/bee_wifi/CMakeFiles/__idf_bee_wifi.dir/bee_wifi.c.obj -MF esp-idf\bee_wifi\CMakeFiles\__idf_bee_wifi.dir\bee_wifi.c.obj.d -o esp-idf/bee_wifi/CMakeFiles/__idf_bee_wifi.dir/bee_wifi.c.obj -c "E:/Phase2 beta/components/bee_wifi/bee_wifi.c"
In file included from C:/Espressif/frameworks/esp-idf-v5.1/components/freertos/FreeRTOS-Kernel/include/freertos/FreeRTOS.h:68,
                 from E:/Phase2 beta/components/bee_wifi/bee_wifi.c:15:
E:/Phase2 beta/components/bee_wifi/bee_wifi.c: In function 'cnt_timeout':
E:/Phase2 beta/components/bee_wifi/bee_wifi.c:185:52: error: invalid operands to binary * (have 'uint8_t *' {aka 'unsigned char *'} and 'int')
  185 |     TickType_t prov_timeout = pdMS_TO_TICKS(u8time * 1000); // Timeout period, adjust as needed
      |                                                    ^
C:/Espressif/frameworks/esp-idf-v5.1/components/freertos/FreeRTOS-Kernel/include/freertos/projdefs.h:48:81: note: in definition of macro 'pdMS_TO_TICKS'
   48 |     #define pdMS_TO_TICKS( xTimeInMs )    ( ( TickType_t ) ( ( ( TickType_t ) ( xTimeInMs ) * ( TickType_t ) configTICK_RATE_HZ ) / ( TickType_t ) 1000U ) )
      |                                                                                 ^~~~~~~~~
E:/Phase2 beta/components/bee_wifi/bee_wifi.c: In function 'prov_timeout_task':
E:/Phase2 beta/components/bee_wifi/bee_wifi.c:301:17: error: lvalue required as unary '&' operand
  301 |     cnt_timeout(&10);
      |                 ^
E:/Phase2 beta/components/bee_wifi/bee_wifi.c: In function 'prov_fail_task':
E:/Phase2 beta/components/bee_wifi/bee_wifi.c:314:17: error: lvalue required as unary '&' operand
  314 |     cnt_timeout(&10);
      |                 ^
ninja: build stopped: subcommand failed.
